--- a/dicionario_tupi/pubspec.yaml
+++ b/dicionario_tupi/pubspec.yaml
@@ -11,6 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  get: ^4.6.6
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
