--- a/dicionario_tupi/pubspec.yaml
+++ b/dicionario_tupi/pubspec.yaml
@@ -1,15 +1,17 @@
 name: dicionario_tupi
 description: "Aplicativo web para um trabalho da disciplina 'Estrutura de Dados II', do curso superior 'Análise e Desenvolvimento de Sistemas', no IFTO - Araguaína."
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
+  sdk: ">=3.3.3 <4.0.0"
 
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_web_plugins:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
