--- a/dicionario_tupi/pubspec.yaml
+++ b/dicionario_tupi/pubspec.yaml
@@ -28,3 +28,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/dicionario/json/dicionario.json
+    - assets/app/icon/app_icon.png
