--- a/dicionario_tupi/pubspec.yaml
+++ b/dicionario_tupi/pubspec.yaml
@@ -24,6 +24,11 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
 
+flutter_launcher_icons:
+  image_path: "assets/app/icon/app_icon.png"
+  web:
+    generate: true
+
 flutter:
   uses-material-design: true
   assets:
