--- a/dicionario_tupi/pubspec.yaml
+++ b/dicionario_tupi/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   get: ^4.6.6
   intl: ^0.18.1
   flutter_launcher_icons: ^0.13.1
+  rename: ^3.0.2
 
 dev_dependencies:
   flutter_test:
